--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "tools",
+  "name": "noob-tools",
   "version": "1.0.0",
-  "description": "",
+  "description": "集成数据管理工具",
   "private": true,
+  "main":"src/electron/main.js",
   "scripts": {
     "build": "webpack",
-    "server": "node server.js"
+    "server": "node server.js",
+    "start": "webpack && electron ."
   },
   "keywords": [],
   "author": "",
@@ -16,6 +18,7 @@
     "babel-loader": "^8.2.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
+    "electron": "^10.1.5",
     "express": "^4.17.1",
     "fibers": "^5.0.0",
     "html-webpack-plugin": "^4.5.0",
