--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "集成数据管理工具",
   "private": true,
-  "main": "src/electron/main.js",
+  "main": "src/electron.main.js",
   "scripts": {
     "build": "webpack",
     "server": "node server.js",
