--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   "dependencies": {
     "es6-promise": "^4.2.8",
     "lodash": "^4.17.20",
+    "path-browserify": "^1.0.1",
+    "redis": "^3.0.2",
     "vue": "^2.6.12",
     "vuex": "^3.5.1"
   }
