--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.12.3",
+    "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.1",
     "babel-loader": "^8.2.1",
     "clean-webpack-plugin": "^3.0.0",
@@ -34,6 +35,7 @@
   },
   "dependencies": {
     "es6-promise": "^4.2.8",
+    "format-to-json": "^1.0.4",
     "ioredis": "^4.19.2",
     "lodash": "^4.17.20",
     "path-browserify": "^1.0.1",
