--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lodash": "^4.17.20",
     "path-browserify": "^1.0.1",
     "vue": "^2.6.12",
+    "vue-i18n": "^8.22.2",
     "vuex": "^3.5.1"
   }
 }
